--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./destructuring_arrays.js"></script> -->
     <!-- <script src="./destructuring_objects.js"></script> -->
     <!-- <script src="./spread_operator.js"></script> -->
-    <script src="./rest Pattern and Parameters.js"></script>
+    <!-- <script src="./rest Pattern and Parameters.js"></script> -->
+    <script src="./short circuiting.js"></script>
   </body>
 </html>
