--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="./spread_operator.js"></script> -->
     <!-- <script src="./rest Pattern and Parameters.js"></script> -->
     <!-- <script src="./short circuiting.js"></script> -->
-    <script src="./nullish coalescing operator.js"></script>
+    <!-- <script src="./nullish coalescing operator.js"></script> -->
+    <script src="./logical assignment operators.js"></script>
   </body>
 </html>
