--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="./rest Pattern and Parameters.js"></script> -->
     <!-- <script src="./short circuiting.js"></script> -->
     <!-- <script src="./nullish coalescing operator.js"></script> -->
-    <script src="./logical assignment operators.js"></script>
+    <!-- <script src="./logical assignment operators.js"></script> -->
+    <!-- <script src="./coding_challenge_#1.js"></script> -->
+    <script src="./for-of loop.js"></script>
   </body>
 </html>
