--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="./nullish coalescing operator.js"></script> -->
     <!-- <script src="./logical assignment operators.js"></script> -->
     <!-- <script src="./coding_challenge_#1.js"></script> -->
-    <script src="./for-of loop.js"></script>
+    <!-- <script src="./for-of loop.js"></script> -->
+    <script src="./enhanced_object_literals.js"></script>
   </body>
 </html>
