--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -16,6 +16,8 @@
     <!-- <script src="./logical assignment operators.js"></script> -->
     <!-- <script src="./coding_challenge_#1.js"></script> -->
     <!-- <script src="./for-of loop.js"></script> -->
-    <script src="./enhanced_object_literals.js"></script>
+    <!-- <script src="./enhanced_object_literals.js"></script> -->
+    <!-- <script src="./optional_chaining.js"></script> -->
+    <script src="./looping_object- obj keys,values,entries.js"></script>
   </body>
 </html>
