--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -18,6 +18,8 @@
     <!-- <script src="./for-of loop.js"></script> -->
     <!-- <script src="./enhanced_object_literals.js"></script> -->
     <!-- <script src="./optional_chaining.js"></script> -->
-    <script src="./looping_object- obj keys,values,entries.js"></script>
+    <!-- <script src="./looping_object- obj keys,values,entries.js"></script> -->
+    <!-- <script src="./coding_challenge_#2.js"></script> -->
+    <script src="sets.js"></script>
   </body>
 </html>
