--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Data Structures and Modern Operators</h1>
     <!-- <script src="./destructuring_arrays.js"></script> -->
     <!-- <script src="./destructuring_objects.js"></script> -->
     <!-- <script src="./spread_operator.js"></script> -->
@@ -20,6 +21,7 @@
     <!-- <script src="./optional_chaining.js"></script> -->
     <!-- <script src="./looping_object- obj keys,values,entries.js"></script> -->
     <!-- <script src="./coding_challenge_#2.js"></script> -->
-    <script src="sets.js"></script>
+    <!-- <script src="sets.js"></script> -->
+    <script src="./maps (fundamentals).js"></script>
   </body>
 </html>
