--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -22,6 +22,7 @@
     <!-- <script src="./looping_object- obj keys,values,entries.js"></script> -->
     <!-- <script src="./coding_challenge_#2.js"></script> -->
     <!-- <script src="sets.js"></script> -->
-    <script src="./maps (fundamentals).js"></script>
+    <!-- <script src="./maps (fundamentals).js"></script> -->
+    <script src="./map (iteration).js"></script>
   </body>
 </html>
