--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -23,6 +23,7 @@
     <!-- <script src="./coding_challenge_#2.js"></script> -->
     <!-- <script src="sets.js"></script> -->
     <!-- <script src="./maps (fundamentals).js"></script> -->
-    <script src="./map (iteration).js"></script>
+    <!-- <script src="./map (iteration).js"></script> -->
+    <script src="./coding_challenge_#3.js"></script>
   </body>
 </html>
