working with string (part 1)

--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -24,6 +24,7 @@
     <!-- <script src="sets.js"></script> -->
     <!-- <script src="./maps (fundamentals).js"></script> -->
     <!-- <script src="./map (iteration).js"></script> -->
-    <script src="./coding_challenge_#3.js"></script>
+    <!-- <script src="./coding_challenge_#3.js"></script> -->
+    <script src="./working with strings (part 1).js"></script>
   </body>
 </html>
