working with strings (part 3)

--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -26,6 +26,7 @@
     <!-- <script src="./map (iteration).js"></script> -->
     <!-- <script src="./coding_challenge_#3.js"></script> -->
     <!-- <script src="./working with strings (part 1).js"></script> -->
-    <script src="./working with strings (part 2).js"></script>
+    <!-- <script src="./working with strings (part 2).js"></script> -->
+    <script src="./working with strings (part 3).js"></script>
   </body>
 </html>
