--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        background-color: black;
+      }
+      h1 {
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <h1>Data Structures and Modern Operators</h1>
+    <!-- <textarea name="" id="textarea" cols="30" rows="10"></textarea> -->
+    <!-- <button id="button">Click</button> -->
     <!-- <script src="./destructuring_arrays.js"></script> -->
     <!-- <script src="./destructuring_objects.js"></script> -->
     <!-- <script src="./spread_operator.js"></script> -->
@@ -27,6 +37,7 @@
     <!-- <script src="./coding_challenge_#3.js"></script> -->
     <!-- <script src="./working with strings (part 1).js"></script> -->
     <!-- <script src="./working with strings (part 2).js"></script> -->
-    <script src="./working with strings (part 3).js"></script>
+    <!-- <script src="./working with strings (part 3).js"></script> -->
+    <script src="./coding_challenge_#4.js"></script>
   </body>
 </html>
