string methods practice

--- a/Data Structures, Modern Operators and Strings/index.html
+++ b/Data Structures, Modern Operators and Strings/index.html
@@ -38,6 +38,7 @@
     <!-- <script src="./working with strings (part 1).js"></script> -->
     <!-- <script src="./working with strings (part 2).js"></script> -->
     <!-- <script src="./working with strings (part 3).js"></script> -->
-    <script src="./coding_challenge_#4.js"></script>
+    <!-- <script src="./coding_challenge_#4.js"></script> -->
+    <script src="string methods practice.js"></script>
   </body>
 </html>
