--- a/A Closer Look at Functions/index.html
+++ b/A Closer Look at Functions/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./default parameters.js"></script>
+    <!-- <script src="./default parameters.js"></script> -->
+    <script src="./how passing arguments works (value vs reference).js"></script>
   </body>
 </html>
