--- a/A Closer Look at Functions/index.html
+++ b/A Closer Look at Functions/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>A Closer Look at Functions</title>
   </head>
   <body>
+    <h1>A Closer Look at Functions</h1>
     <!-- <script src="./default parameters.js"></script> -->
-    <script src="./how passing arguments works (value vs reference).js"></script>
+    <!-- <script src="./how passing arguments works (value vs reference).js"></script> -->
+    <!-- <script src="./first-class and higher-order functions.js"></script> -->
+    <script src="./accepting callback functions.js"></script>
   </body>
 </html>
