functions returning functions

--- a/A Closer Look at Functions/index.html
+++ b/A Closer Look at Functions/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./default parameters.js"></script> -->
     <!-- <script src="./how passing arguments works (value vs reference).js"></script> -->
     <!-- <script src="./first-class and higher-order functions.js"></script> -->
-    <script src="./accepting callback functions.js"></script>
+    <!-- <script src="./accepting callback functions.js"></script> -->
+    <script src="./functions returning functions.js"></script>
   </body>
 </html>
