immediately invoked function expressions (IIFE)

--- a/A Closer Look at Functions/index.html
+++ b/A Closer Look at Functions/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="./how passing arguments works (value vs reference).js"></script> -->
     <!-- <script src="./first-class and higher-order functions.js"></script> -->
     <!-- <script src="./accepting callback functions.js"></script> -->
-    <script src="./functions returning functions.js"></script>
+    <!-- <script src="./functions returning functions.js"></script> -->
+    <script src="./immediately invoked function expressions (IIFE).js"></script>
   </body>
 </html>
