--- a/A Closer Look at Functions/index.html
+++ b/A Closer Look at Functions/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="./first-class and higher-order functions.js"></script> -->
     <!-- <script src="./accepting callback functions.js"></script> -->
     <!-- <script src="./functions returning functions.js"></script> -->
-    <script src="./immediately invoked function expressions (IIFE).js"></script>
+    <!-- <script src="./immediately invoked function expressions (IIFE).js"></script> -->
+    <script src="./coding_challenge_#2.js"></script>
   </body>
 </html>
