--- a/Working With Arrays/index.html
+++ b/Working With Arrays/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Working with Arrays</h1>
-    <script src="./simple array methods.js"></script>
+    <!-- <script src="./simple array methods.js"></script> -->
+    <script src="./at methods.js"></script>
   </body>
 </html>
