--- a/Working With Arrays/index.html
+++ b/Working With Arrays/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Working with Arrays</h1>
     <!-- <script src="./simple array methods.js"></script> -->
-    <script src="./at methods.js"></script>
+    <!-- <script src="./at methods.js"></script> -->
+    <script src="./looping arrays (foreach).js"></script>
   </body>
 </html>
