forEach with Maps and Sets

--- a/Working With Arrays/index.html
+++ b/Working With Arrays/index.html
@@ -10,6 +10,7 @@
     <h1>Working with Arrays</h1>
     <!-- <script src="./simple array methods.js"></script> -->
     <!-- <script src="./at methods.js"></script> -->
-    <script src="./looping arrays (foreach).js"></script>
+    <!-- <script src="./looping arrays (foreach).js"></script> -->
+    <script src="./forEach with Maps and Sets.js"></script>
   </body>
 </html>
