--- a/Working With Arrays/index.html
+++ b/Working With Arrays/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./simple array methods.js"></script> -->
     <!-- <script src="./at methods.js"></script> -->
     <!-- <script src="./looping arrays (foreach).js"></script> -->
-    <script src="./forEach with Maps and Sets.js"></script>
+    <!-- <script src="./forEach with Maps and Sets.js"></script> -->
+    <script src="./coding_challenge_#1.js"></script>
   </body>
 </html>
