150. The Map method

--- a/Working With Arrays/index.html
+++ b/Working With Arrays/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="./at methods.js"></script> -->
     <!-- <script src="./looping arrays (foreach).js"></script> -->
     <!-- <script src="./forEach with Maps and Sets.js"></script> -->
-    <script src="./coding_challenge_#1.js"></script>
+    <!-- <script src="./coding_challenge_#1.js"></script> -->
+    <script src="./the map method.js"></script>
   </body>
 </html>
