154: the reduce method

--- a/Working With Arrays/index.html
+++ b/Working With Arrays/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="./forEach with Maps and Sets.js"></script> -->
     <!-- <script src="./coding_challenge_#1.js"></script> -->
     <!-- <script src="./the map method.js"></script> -->
-    <script src="./the filter method.js"></script>
+    <!-- <script src="./the filter method.js"></script> -->
+    <script src="./the reduce method.js"></script>
   </body>
 </html>
